@@ -5,7 +5,7 @@ Let’s Encrypt has stringent rate limits in place during the public beta period
 If you start testing using the production endpoint (which is the default),
 you will quickly hit these limits and find yourself locked out.
 
-To avoid this, please set the CA property to the Let’s Encrypt staging server URL in your `config.sh` file:
+To avoid this, please set the CA property to the Let’s Encrypt staging server URL in your config file:
 
 ```bash
 CA="https://acme-staging.api.letsencrypt.org/directory"
